--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Science fiction, American'
 - !lcc 'PS'
+- GITenberg
 title: This Crowded Earth
 url: http://www.gutenberg.org/ebooks/25776
